@@ -1,9 +1,9 @@
-load_lib "dejagnu.exp"
+load_lib "poke.exp"
 
 # Skip this test if poke.mi-json/mi-json wasn't built.
 if { [file exists "poke.mi-json/mi-json"] } {
     # Execute the test cases, and analyse the output
-    if { [host_execute "poke.mi-json/mi-json"] ne "" } {
-        perror "mi-json had an execution error" 0
+    if { [verified_host_execute "poke.mi-json/mi-json"] ne "" } {
+        fail "mi-json had an execution error"
     }
 }
